--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Dec 21 23:00:12 CST 2015
-sdk.dir=D\:\\android-sdk
+sdk.dir=/Users/smallow/Downloads/adt-bundle-mac-x86_64-20140702/sdk
