--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "com.smallow.badminton"
@@ -21,14 +21,15 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:design:22.2.1'
+    compile 'com.android.support:support-v4:22.2.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'com.loopj.android:android-async-http:1.4.8'
     compile 'com.pnikosis:materialish-progress:1.7'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile project(':autolayout')
+    //compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.facebook.stetho:stetho:1.2.0'
+    compile 'com.zhy:autolayout:1.3.6'
     compile project(':model')
     compile project(':core')
 }
